test/files/neg/t7622-missing-required.scala
//> using options -Xplugin-require:special-plugin
//

// the amazing features of this trait
// are unlocked by compiling with a special plugin.
trait Amazing
